--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img class="main-content-img-exam" src="img/undraw_exams_g4ow.svg" alt="Exam takers">
         <img class="main-content-img-studying" src="img/undraw_studying_s3l7.svg" alt="Person studying">
         <div class="main-content-actionbar d-flex align-items-center">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row d-flex align-items-center">
                     <div class="col">
                         <div class="main-content-actionbar--circle main-content-actionbar--circle--purple">
